php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #8991 Incorrect result from mysql_field_type()
Submitted: 2001-01-29 20:32 UTC Modified: 2001-01-30 19:56 UTC
From: wchu010 at cs dot auckland dot ac dot nz Assigned:
Status: Closed Package: MySQL related
PHP Version: 4.0.4pl1 OS: Linux
Private report: No CVE-ID: None
 [2001-01-29 20:32 UTC] wchu010 at cs dot auckland dot ac dot nz
For data type "YEAR" in MySQL, the function mysql_field_type() returns "unknown" as type.

I notice this problem with MySQL 3.23.32 and PHP 4.0.4p1.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2001-01-30 19:56 UTC] elixer@php.net
This has just been fixed in CVS.  Please grab the latest and see if this fixes your problem.

Sean
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Aug 18 07:00:02 2026 UTC