Fix for bug #8991.  mysql_field_type() now returns "year" for columns of type YEAR.